# SurgiConsent

./: .gitignore  Anchor.toml  Anchor.toml.save  Cargo.toml  README.md  package.json  tsconfig.json
programs/consent_audit/: Cargo.toml
programs/consent_audit/src/: lib.rs
tests/: consent_audit.ts  globals.d.ts
