[package]
name = "surgi_consent"
version = "0.1.0"
description = "SurgiConsent on-chain audit program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "surgi_consent"

[features]
idl-build = ["anchor-lang/idl-build"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
